--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-google-places-autocomplete": "^2.4.1",
-    "react-native-maps": "0.31.1"
+    "react-native-maps": "0.31.1",
+    "expo-updates": "~0.14.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
